# epimetheus

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  geobacillus-plasmids.pileup.bed.gz.tbi
.github/workflows/: cli-release.yml  pr-test.yml  pypi-release.yml  release.yml
epimetheus-cli/: Cargo.toml
epimetheus-cli/benches/: methylation_pattern_bench.rs
epimetheus-cli/src/: argparser.rs  main.rs  utils.rs
epimetheus-cli/src/commands/: mod.rs
epimetheus-cli/src/commands/bam_merge/: args.rs
epimetheus-cli/src/commands/compression/: args.rs
epimetheus-cli/src/commands/extract_methylation_pattern/: args.rs  mod.rs  parallel_batch_loader.rs
epimetheus-cli/src/commands/motif_clustering/: args.rs  mod.rs
epimetheus-cli/tests/: integration_test.rs
epimetheus-cli/tests/data/: barcode01_5x_coverage.bam.bai  expected_out_median.tsv  expected_out_raw.tsv  expected_out_weighted_mean.tsv  geobacillus.bed.gz.tbi  read_meth.tsv  read_meth_fastq.tsv  u6343517_minimal.bam.bai
epimetheus-core/: Cargo.toml
epimetheus-core/src/: processing.rs
epimetheus-core/src/algorithms/: methylation_pattern.rs  motif_processor.rs
epimetheus-core/src/data/: contig.rs
epimetheus-core/src/extract_methylation_pattern/: batch_loader.rs  mod.rs  parallel_batch_loader.rs  reader.rs
epimetheus-core/src/models/: contig.rs  genome_workspace.rs  methylation.rs  pileup.rs
epimetheus-core/src/motif_clustering/: mod.rs
epimetheus-core/src/services/: methylation_processor.rs  mod.rs  parallel_processer.rs  traits.rs
epimetheus-core/src/services/application/: methylation_pattern_service.rs
epimetheus-core/src/services/domain/: methylation_processor.rs  mod.rs  motif_processor.rs  parallel_processer.rs  sequential_processer.rs
epimetheus-io/: Cargo.toml
epimetheus-io/src/compression/bgzip/: compressor.rs  decompressor.rs
epimetheus-io/src/io/: mod.rs  traits.rs
epimetheus-io/src/io/modified_basecalls/: descriptor.rs  map.rs  mod.rs  record.rs
epimetheus-io/src/io/readers/: bam.rs  bed.rs  fasta.rs  fastq.rs  mod.rs
epimetheus-io/src/io/writers/: bam.rs  mod.rs  sam.rs
epimetheus-io/src/loaders/: sequential_batch_loader.rs
epimetheus-io/src/readers/: bed.rs  bedgz.rs  fasta.rs  mod.rs
epimetheus-io/src/services/: compression_service.rs  decompression_service.rs
epimetheus-orchestration/: Cargo.toml
epimetheus-orchestration/src/: extract_methylation_pattern_service.rs  extract_read_methylation_service.rs  lib.rs
epimetheus-orchestration/src/bam_tag_merge_service/: mod.rs
epimetheus-py/: Cargo.toml  README.md  pyproject.toml
epimetheus-py/src/: lib.rs
epimetheus-py/tests/: test_methylation_pattern.py  test_motif_clustering.py  test_pileup_query_and_compression.py  test_version.py
epimetheus-support/: Cargo.toml
epimetheus-support/src/: lib.rs
epimetheus-support/src/bgzip/: args.rs  mod.rs  reader.rs  writer.rs
methylome/: Cargo.toml  README.md
methylome/src/: iupac.rs  lib.rs  modtype.rs  motif.rs  read.rs  sequence.rs  strand.rs
src/: main.rs  processing.rs
src/data/: mod.rs
src/extract_methylation_pattern/: args.rs  batch_loader.rs  mod.rs  utils.rs
src/motif_clustering/: mod.rs
tests/data/: expected_out.tsv
