[workspace]
members = ["methylome", "epimetheus-core", "epimetheus-cli"]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2021"
authors = ["semoda@bio.aau.dk"]

description = "Cli tool for fast lookup in pileup for motif methylation"
license = "MIT" 
repository = "https://github.com/SebastianDall/epimetheus"


[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.94"
log = "0.4.22"
env_logger = "0.11.5"
humantime = "2.1.0"


[profile.release]
debug = true
