[package]
name = "epimetheus"
version = "0.7.4"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = {version = "*", features = ["derive"]}
epimetheus-core = {path = "../epimetheus-core"}
epimetheus-orchestration = {path = "../epimetheus-orchestration"}
epimetheus-io = {path = "../epimetheus-io"}
rayon = { workspace = true }
tempfile = { workspace = true }
indicatif = {version = "0.17.8", features = ["rayon"]}
humantime = {workspace = true }
log = {workspace = true }
env_logger = {workspace = true }
anyhow = {workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "methylation_pattern_bench"
harness = false
