[package]
name = "epimetheus-core"
edition = "2024"
version.workspace = true

[dependencies]
clap = { workspace = true }
methylome = { path = "../methylome"}
pyo3 = { version = "*", optional = true, features = ["extension-module"]}
rayon = { workspace = true }
log = {workspace = true }
humantime = {workspace = true }
env_logger = {workspace = true }
anyhow = {workspace = true}
tempfile = { workspace = true }
indicatif = { version = "*", features = ["rayon"] }
bytesize = "1.3.0"
ahash = "0.8.11"
csv = { workspace = true }
# pprof = { version = "0.14", features = ["flamegraph"] }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []
pyo3 = ["dep:pyo3"]
