[package]
name = "epimetheus-io"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
epimetheus-methylome = { path = "../methylome" }
epimetheus-core = { path = "../epimetheus-core" }
anyhow = { workspace = true }
log = {workspace = true}
csv = { workspace = true }
rayon = { workspace = true }
ahash = "0.8.11"
seq_io = "0.3.2"
noodles-tabix = "0.59.0"
noodles-csi = "0.53.0"
noodles-bgzf = "0.45.0"
noodles-core = "0.18.0"
noodles-fastq = "0.21.0"
noodles-bam = "0.85.0"
noodles-sam = "0.81.0"
bstr = "*"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.0"
