[package]
name = "epimetheus-orchestration"
version = "0.8.1"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
epimetheus-core = { path = "../epimetheus-core" }
epimetheus-io = { path = "../epimetheus-io" }
epimetheus-methylome = { path = "../methylome" }
indicatif = { version = "*", features = ["rayon"] }
humantime = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
polars = { workspace = true }
noodles-sam = "0.81.0"
noodles-bam = "0.85.0"
ahash = "0.8.11"
serde = { version = "1.0.228", features = ["derive"] }
csv.workspace = true
bstr = "1.12.0"
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
