[package]
name = "epimetheus-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.release]
pre-release-hook = [
  "sh", "-c",
  "sed -i 's/^version = .*/version = \"${NEW_VERSION}\"/' pyproject.toml"
]
[lib]
crate-type = ["cdylib"]
name = "epymetheus"

[dependencies]
pyo3 = { version = "*", features = ["extension-module"]}
epimetheus-core = { path = "../epimetheus-core"}
