[package]
name = "epimetheus-support"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
methylome = { path = "../methylome" }
clap = { workspace = true }
anyhow = { workspace = true }
log = {workspace = true}
rust-htslib = "*"
bgzip = {version = "0.3.1", features = ["rayon"]}
noodles-tabix = "0.57.0"
noodles-csi = "0.51.0"
ahash = "0.8.11"
noodles-bgzf = "0.43.0"
noodles-core = "0.18.0"

[dev-dependencies]
tempfile = "3.0"
